--- a/styles/themes/dutchess.css
+++ b/styles/themes/dutchess.css
@@ -5,8 +5,7 @@
     --cal-monthtxt-color: white;
     --cal-date-color: #777;
     /* page values */
-    --title-color: #5caace;
-    --text-color: #000;
+    --title-color: #bcdbe9;
     --top-bar-color: #00527D;
     /*--font-color: #2f2f97;*/
     --font-color: var(--top-bar-color);
@@ -34,4 +33,8 @@
 
 #themeChoice:hover {
     background-color: var(--calculated-hover);
+}
+
+#title_guide {
+    color: var(--top-bar-color) !important
 }
