--- a/styles/themes/dark.css
+++ b/styles/themes/dark.css
@@ -5,7 +5,7 @@
     --cal-monthtxt-color: white;
     --cal-date-color: #777;
     /* page values */
-    --title-color: #b9cce0;
+    --title-color: #bacde0;
     --top-bar-color: #165384;
     /*--font-color: #7799BB;*/
     --font-color: var(--top-bar-color);
