--- a/styles/main.css
+++ b/styles/main.css
@@ -6,9 +6,10 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     padding: 0;
     margin: 0;
-    min-height: 100vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
+    overflow-y: scroll;
     color: var(--font-color);
     background-color: var(--page-background);
 }
